src/app/features.module.css
.mainDiv {
  display: flex;
  position: relative;
  flex-direction: column;
  gap: 10px;
  width: 100%;
  height: auto;
  align-items: center;
  background-color: black;
}

.singleFeatureDiv {
  display: flex;
  position: relative;
  width: auto;
  height: auto;
  max-width: 1920px;
  justify-content: center;
  overflow: hidden;
}

.img {
  max-width: 1920px;
  aspect-ratio: 1920 / 650;
  width: 100%;
  height: auto;
}

.textDiv {
  display: flex;
  position: absolute;
  flex-direction: column;
  justify-content: center;
  margin-left: 10%;
  left: 0%;
  gap: 20px;
  width: 35%;
  height: 100%;
}

.header {
  font-size: 32px;
  color: white;
}

.paragraph {
  font-size: 24px;
  color: white;
}

@media (max-width: 1350px) {
  .textDiv {
    width: 45%;
    margin-left: 5%;
  }

  .header {
    font-size: 28px;
  }

  .paragraph {
    font-size: 20px;
  }
}

@media (max-width: 1000px) {
  .textDiv {
    width: 45%;
  }

  .header {
    font-size: 25px;
  }

  .paragraph {
    font-size: 17px;
  }
}

@media (max-width: 900px) {
  .textDiv {
    margin-left: 15%;
  }
}

@media (max-width: 750px) {
  .textDiv {
    margin-left: 20%;
  }
}

@media (max-width: 700px) {
  .mainDiv {
    padding-top: 0px;
    padding-bottom: 10px;
  }

  .singleFeatureDiv {
    flex-direction: column;
  } 

  .img {
    width: 200%;
    transform: translateX(-45%);
  }

  .textDiv {
    position: relative;
    width: 100%;
    margin-left: 0%;
    padding: 10px;
    gap: 5px;
  }
}

